// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frameworkFactory should auto init correctly in default config 1`] = `
Config {
  "basePath": "./",
  "beforeMiddleware": Array [
    "vite-before",
  ],
  "files": Array [],
  "frameworks": Array [],
  "middleware": Array [
    "vite",
  ],
  "plugins": Array [],
  "reporters": Array [],
  "urlRoot": "/",
}
`;

exports[`frameworkFactory should not auto init if vite.autoInit is false in config 1`] = `
Config {
  "basePath": "./",
  "files": Array [],
  "frameworks": Array [],
  "plugins": Array [],
  "reporters": Array [],
  "urlRoot": "/",
  "vite": Object {
    "autoInit": false,
  },
}
`;
